--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 body {
     background-image: url("image/bg.jpeg");
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header {
@@ -32,12 +33,12 @@ h1 {
     font-size: 7vw;
 }
 
-/* h2 {
+h2 {
     font-family: "Notable", sans-serif;
     text-align: center;
     color: var(--hottext);
-} */
-
+    padding-bottom: 10px;
+}
 
 nav {
     display: flex;
@@ -56,10 +57,63 @@ a {
     color: var(--hottext);   
 }
 
+main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#biography {
+    width: 90%;
+    background: transparent;
+    border: 3px solid black;
+}
+
+#portrait {
+    background-image: url('image/elfport.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.box {
+    background: transparent;
+    margin: 5px 0px;
+    border: 3px solid black;
+    min-height: 500px;
+    width: 90%;
+}
+
+#supreme {
+    background-image: url('image/supremejourneyscreenshot.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+#weather {
+    background-image: url('image/weatherreportscreenshot.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#quiz {
+    background-image: url('image/quizscreenshot.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#dayplanner {
+    background-image: url('image/dayplannerscreenshot.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 footer {
     border-top: 3px solid black;
+    border-bottom: 3px solid black;
     width: 100%;
-    height: 125px;
     background-image: url("image/circlesfooter.png");
     background-size: cover;
 }
