--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@
 
 body {
     background-image: url("image/bg.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat-y;
 }
 
 header {
@@ -18,12 +18,13 @@ header {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    border-bottom: 3px solid black;
+    border-bottom: 5px solid black;
 }
 
 :root {
-    --hottext: rgb(44, 205, 35);
-
+    --hottext: rgb(34, 223, 24);
+    --skewtext: rgb(250, 27, 180);
+    --superhottext: rgb(255, 255, 92);
 }
 
 h1 {
@@ -35,9 +36,10 @@ h1 {
 
 h2 {
     font-family: "Notable", sans-serif;
+    margin: 0px 40px 5px 40px;
     text-align: center;
-    color: var(--hottext);
-    padding-bottom: 10px;
+    font-size: 3vw;
+    color: black;   
 }
 
 nav {
@@ -46,80 +48,95 @@ nav {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    border-bottom: 3px solid black;
+    border-bottom: 5px solid black;
 }
 
 a { 
     font-family: "Notable", sans-serif;
     margin: 0px 40px 5px 40px;
     text-decoration: none;
-    font-size: 2vw;
+    font-size: 3vw;
     color: var(--hottext);   
+}
+
+a:hover {
+    transform: skew(3deg);
+    color: var(--skewtext);
 }
 
 main {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
 #biography {
-    width: 90%;
+    width: 100%;
+    height: fit-content;
     background: transparent;
-    border: 3px solid black;
+    border-top: 5px solid black;
+    border-bottom: 5px solid black;
 }
 
-#portrait {
-    background-image: url('image/elfport.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+#work {
+    display: none;
 }
 
 .box {
+    margin: 10px 0px;
+    flex: 2 1 auto;
     background: transparent;
-    margin: 5px 0px;
-    border: 3px solid black;
-    min-height: 500px;
-    width: 90%;
+    border-top: 5px solid black;
+    border-bottom: 5px solid black;
 }
 
-#supreme {
-    background-image: url('image/supremejourneyscreenshot.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+.box p {
+    font-size: 2.5vw;
+    text-align: center;
+    font-weight: 600;
+    padding: 10px;
 }
 
-#weather {
-    background-image: url('image/weatherreportscreenshot.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+.box img {
+    height: 100%;
+    width: 100%;
+    opacity: 40%;
 }
 
-#quiz {
-    background-image: url('image/quizscreenshot.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+.box img:hover {
+    opacity: 100%;
 }
 
-#dayplanner {
-    background-image: url('image/dayplannerscreenshot.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+.box a {
+    font-size: 5vw;
+    color: black;
+}
+
+.box a:hover {
+    color: var(--skewtext);
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-top: 5px solid black;
 }
 
 footer {
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
+    border-top: 5px solid black;
+    border-bottom: 5px solid black;
     width: 100%;
     background-image: url("image/circlesfooter.png");
     background-size: cover;
 }
 
 #contactlinks {
-    border-top: 3px solid black;
+    border-top: 5px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
